--- a/FrontendWebService/src/app/student-table/student-table.component.html
+++ b/FrontendWebService/src/app/student-table/student-table.component.html
@@ -1,4 +1,4 @@
-<div class="w-25 m-auto">
+<!--div class="w-25 m-auto">
     <h2>Students</h2>
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -51,3 +51,4 @@
       </tbody>
     </table>
   </div>
+-->
