--- a/FrontendWebService/src/app/components/admin-courses/admin-courses.component.html
+++ b/FrontendWebService/src/app/components/admin-courses/admin-courses.component.html
@@ -5,6 +5,7 @@
           <tr>
             <th scope="col">#</th>
             <th scope="col">Name</th>
+            <th scope="col">ECTS</th>
             <th scope="col">Options</th>
             <th scope="col">Options</th>
             <th scope="col">Options</th>
@@ -14,6 +15,7 @@
             <tr *ngFor = "let course of courses; let i = index">
                 <th scope="row">{{ i + 1 }}</th>
                 <td>{{ course.title }}</td>
+                <td>{{ course.ects }}</td>
                 <td>
                   <button type="button" class="btn btn-info" (click)="gotoDetails(course.id)">Details</button>
                 </td>
