--- a/FrontendWebService/src/app/components/admin-courses/admin-courses.component.html
+++ b/FrontendWebService/src/app/components/admin-courses/admin-courses.component.html
@@ -20,7 +20,7 @@
                   <button type="button" class="btn btn-info" (click)="gotoDetails(course.id)">Details</button>
                 </td>
                 <td>
-                  <button type="button" class="btn btn-info">Edit</button>
+                  <button type="button" class="btn btn-info" (click)="gotoDetails(course.id)">Edit</button>
                 </td>
                 <td>
                   <button type="button" class="btn btn-danger">Delete</button>
