--- a/FrontendWebService/src/app/components/admin-courses/admin-courses.component.html
+++ b/FrontendWebService/src/app/components/admin-courses/admin-courses.component.html
@@ -13,6 +13,7 @@
         </thead>
         <tbody>
             <tr *ngFor = "let course of courses; let i = index">
+              <ng-container *ngIf="course.active">
                 <th scope="row">{{ i + 1 }}</th>
                 <td>{{ course.title }}</td>
                 <td>{{ course.ects }}</td>
@@ -23,8 +24,9 @@
                   <button type="button" class="btn btn-info" (click)="gotoDetails(course.id)">Edit</button>
                 </td>
                 <td>
-                  <button type="button" class="btn btn-danger">Delete</button>
+                  <button type="button" class="btn btn-danger" (click)="deleteCourse(course.id)">Delete</button>
                 </td>
+              </ng-container>
             </tr>
         </tbody>
     </table>
