--- a/FrontendWebService/src/app/professor-exams/professor-exams.component.html
+++ b/FrontendWebService/src/app/professor-exams/professor-exams.component.html
@@ -1,5 +1,14 @@
-<div>
-    <h3 style="margin-top: 80px;">{{ title }}</h3>
+<div  div class="bg-light p-4 rounded">
+    <h3>{{ title }}
+      <select
+      (change)="filterByPeriod($event.target.value)"
+       [(ngModel)]="selectedOption">
+        <option *ngFor="let o of options">
+           {{o.name}}
+        </option>
+     </select>
+    </h3>
+    
     <table class="table">
       <thead>
         <tr>
