--- a/FrontendWebService/src/app/admin-students/admin-students.component.html
+++ b/FrontendWebService/src/app/admin-students/admin-students.component.html
@@ -4,9 +4,9 @@
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">FirstName</th>
-        <th scope="col">LastName</th>
-        <th scope="col">Card number</th>
+        <th [appSort]="students" data-order="desc" data-name="firstName" scope="col">FirstName</th>
+        <th [appSort]="students" data-order="desc" data-name="lastName" scope="col">LastName</th>
+        <th [appSort]="students" data-order="desc" data-name="cardNumber" scope="col">Card number</th>
         <th scope="col">Options</th>
         <th scope="col">Options</th>
       </tr>
