[ADDED] implemented pagination for admin-students

--- a/FrontendWebService/src/app/admin-students/admin-students.component.html
+++ b/FrontendWebService/src/app/admin-students/admin-students.component.html
@@ -28,6 +28,11 @@
       </tr>
     </tbody>
   </table>
+  <ul class="nav nav-pills">
+    <li class="nav-item" *ngFor="let p of pages; let i = index">
+      <a class="nav-link" href="" (click)="setPage(i,$event)" [ngClass]="{'active':i==page}">{{i}}</a>
+    </li>
+  </ul>
   <button type="button" class="btn btn-success" style="float: right;" (click)="showAddStudent()">Add student</button>
 </div>
 <div id="addStudent" style="display: none;">
