--- a/FrontendWebService/src/app/admin-exam-registry/admin-exam-registry.component.html
+++ b/FrontendWebService/src/app/admin-exam-registry/admin-exam-registry.component.html
@@ -53,7 +53,7 @@
     </table>
   </div>
 
-    <div id="editExams" div class="bg-light p-4 rounded">
+    <div id="editExams" div class="bg-light p-4 rounded" style="display: none;">
       <h2>Edit Exam Part</h2>
       <form  (ngSubmit)="editExams()">
         <div class="row mb-3">
