--- a/FrontendWebService/src/app/components/exam-part-table/exam-part-table.component.html
+++ b/FrontendWebService/src/app/components/exam-part-table/exam-part-table.component.html
@@ -7,6 +7,7 @@
           <th scope="col">Name</th>
           <th scope="col">Points</th>
           <th scope="col">Required points</th>
+          <th scope="col">Date</th> 
           <th scope="col">Status
             <div class="form-check form-check-inline">
               <input class="form-check-input" type="checkbox" id="statusSortCheckbox" (click)="onCheckClick()">
