--- a/FrontendWebService/src/app/components/admin-courses/admin-courses.component.html
+++ b/FrontendWebService/src/app/components/admin-courses/admin-courses.component.html
@@ -64,6 +64,13 @@
 
     </div>
     <div class="row mb-3">
+      <label for="inputlastName" class="col-sm-2 col-form-label">Teacher ID</label>
+      <div class="col-sm-10">
+        <input [(ngModel)]="id" type="text" id="inputects" class="form-control" placeholder="Enter Teacher id" name="id" >
+      </div>
+
+    </div>
+    <div class="row mb-3">
     <div class="col-12">
       <button type="button" class="btn btn-primary " style="float: right;">Cancel</button>
       <button type="submit" class="btn btn-primary mr-2" style="float: right;" >Confirm</button>
