Fix exam part period change

--- a/FrontendWebService/src/app/admin-exam-registry/admin-exam-registry.component.html
+++ b/FrontendWebService/src/app/admin-exam-registry/admin-exam-registry.component.html
@@ -71,6 +71,13 @@
 
         </div>
         <div class="row mb-3">
+          <label for="inputlastName" class="col-sm-2 col-form-label">ExamPeriod</label>
+          <div class="col-sm-10">
+            <input [(ngModel)]="selectedAdminExamRegistry.examPeriod1" type="text" id="inputexamExamPeriod1Edit" class="form-control" placeholder="Enter the examPeriod1" name="examPeriod1" >
+          </div>
+
+        </div>
+        <div class="row mb-3">
         <div class="col-12">
           <button type="button" class="btn btn-primary " style="float: right;">Cancel</button>
           <button type="submit" class="btn btn-primary mr-2" style="float: right;" >Confirm</button>
