--- a/FrontendWebService/src/app/components/admin-courses/admin-courses.component.html
+++ b/FrontendWebService/src/app/components/admin-courses/admin-courses.component.html
@@ -1,4 +1,4 @@
-<div>
+<div div class="bg-light p-4 rounded">
     <h3 style="margin-top: 80px;">{{ title }}</h3>
     <table class="table">
         <thead>
