--- a/FrontendWebService/src/app/components/admin-courses/admin-courses.component.html
+++ b/FrontendWebService/src/app/components/admin-courses/admin-courses.component.html
@@ -1,4 +1,4 @@
-<div>
+<div div class="bg-light p-4 rounded">
     <h3 style="margin-top: 80px;">{{ title }}</h3>
     <table class="table">
         <thead>
@@ -32,7 +32,7 @@
     </table>
     <button type="button" class="btn btn-success" style="float: right;" (click)="showAddCourse()">Add Course</button>
 </div>
-<div id="addCourse" div class="bg-light p-4 rounded" style="display: none;">
+<div id="addCourse" div class="bg-light p-4 rounded" style="display: none;" div class="bg-light p-4 rounded">
   <h2>Edit Exam Part</h2>
   <form  (ngSubmit)="addCourse()">
     <div class="row mb-3">
