--- a/FrontendWebService/src/app/components/admin-professor/admin-professor/admin-professor.component.html
+++ b/FrontendWebService/src/app/components/admin-professor/admin-professor/admin-professor.component.html
@@ -1,4 +1,4 @@
-<div style="margin-bottom: 1.5rem;">
+<div style="margin-bottom: 1.5rem;" div class="bg-light p-4 rounded">
   <h3 style="margin-top: 80px;">{{ title }}</h3>
   <table class="table">
     <thead>
