--- a/FrontendWebService/src/app/components/admin-courses/admin-courses.component.html
+++ b/FrontendWebService/src/app/components/admin-courses/admin-courses.component.html
@@ -33,7 +33,7 @@
     <button type="button" class="btn btn-success" style="float: right;" (click)="showAddCourse()">Add Course</button>
 </div>
 <div id="addCourse" div class="bg-light p-4 rounded" style="display: none;" div class="bg-light p-4 rounded">
-  <h2>Edit Exam Part</h2>
+  <h2>Add Course</h2>
   <form  (ngSubmit)="addCourse()">
     <div class="row mb-3">
       <label for="inputFirstName" class="col-sm-2 col-form-label">Title</label>
