--- a/FrontendWebService/src/app/professor-navbar/professor-navbar.component.html
+++ b/FrontendWebService/src/app/professor-navbar/professor-navbar.component.html
@@ -1,5 +1,5 @@
 <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
-<div class="d-flex align-items-center">
+<div class="d-flex align-items-center" >
     <div class="site-logo mr-auto w-25"><a routerLink="/">UniService</a></div>
     <div class="mx-auto text-center">
       <nav class="site-navigation position-relative text-right" role="navigation">
@@ -7,7 +7,7 @@
           <li><a routerLink="/professorProfile" class="nav-link"><strong>Profile</strong></a></li>
           <li><a routerLink="/professorExams" class="nav-link"><strong>Exams</strong></a></li>
           <li><a routerLink="/courseTable" class="nav-link"><strong>Courses</strong></a></li>
-          <li class="nav-item"><a class="nav-link" (click)="onLogOut()" >Logout</a></li>
+          <li class="nav-item"><a class="nav-link" (click)="logout()" >Logout</a></li>
         </ul>
       </nav>
     </div>
